@@ -14,11 +14,13 @@
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./MyClass.cs" subtype="Code" buildaction="Compile" />
+    <File name="./EcmaReader.cs" subtype="Code" buildaction="Compile" />
     <File name="./AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="../Schemas/monodoc-ecma.xsd" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
   <Deployment.LinuxDeployData scriptName="ecmautils" />
 </Project>
