@@ -1,15 +1,0 @@
-///
-// MyClass.cs:
-//
-// Author:
-//   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
-//
-// (C) 2007 Hector E. Gomez M
-
-using System;
-
-namespace Monodoc.EcmaUtils {
-public class MyClass {
-
-}
-}
